# GreyscaleBandingGUI

./: README.md  pyproject.toml
burnbands/: __init__.py  cli.py  core.py  gui.py
tests/: test_core.py
